[gd_scene load_steps=4 format=3 uid="uid://cewrcon1yi08d"]

[ext_resource type="Theme" uid="uid://cn18lpnkwwgu1" path="res://assets/ui/theme/transparent_menu_theme.tres" id="1_11kws"]
[ext_resource type="PackedScene" path="res://ui/buttons/menu_button.tscn" id="3"]
[ext_resource type="Script" path="res://ui/menus/main_menu.gd" id="5"]

[node name="main_menu" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -126.0
offset_right = 86.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_11kws")
theme_override_constants/separation = 42
script = ExtResource("5")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Shotcaller"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="quick_start_button" parent="VBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
text = "Quick start"

[node name="new_game_button" parent="VBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2

[node name="campaign_button" parent="VBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
text = "Campaign"

[node name="options_button" parent="VBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="exit_button" parent="VBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/quick_start_button" to="." method="quick_start"]
[connection signal="pressed" from="VBoxContainer/new_game_button" to="." method="show_new_game_menu"]
[connection signal="pressed" from="VBoxContainer/campaign_button" to="." method="campaign_start"]
[connection signal="pressed" from="VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="on_exit"]
